--- a/package.json
+++ b/package.json
@@ -10,14 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.0",
-    "comma-number": "^2.0.1",
+    "asciiart-logo": "^0.2.7",
     "console.table": "^0.10.0",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "inquirer": "^8.2.5",
-    "mysql2": "^2.2.5",
-    "sequelize": "^6.3.5",
-    "ui-terminal": "^1.1.4"
+    "dotenv": "^16.0.3",
+    "inquirer": "^8.2.4",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.3.5"
+  
   }
 }
